Styles: Fix invisible versions on Windows dark mode

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -35,10 +35,4 @@
 @import "./vendor/vue-js-modal";
 /* @import '@/node_modules/xterm/css/xterm.css'; */
 
-/** Rancher Desktop styles **/
-.labeled-input {
-  margin-bottom: 1em;
-}
-label > button:first-child:not(.btn-sm) {
-  margin-right: 1em;
-}
+@import "./rancher-desktop.scss";
